--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -20,6 +20,10 @@ body,
 
 nav
   border-bottom: lightgray solid 0.1vmin
+  height: 5.2rem
+
+.left-pad
+  margin-left: 1rem
 
 .content .taglist
   list-style: none
