fix image display issue caused by prefixPath

--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -22,7 +22,7 @@ nav
   border-bottom: lightgray solid 0.1vmin
   height: 5.2rem
 
-.navbar-item img
+.navbar-item .header-img img
   max-height: 4.75rem
 
 .left-pad
